# omo_r1mini

./: .gitignore  README.md
omo_r1mini/: package.xml
omo_r1mini_bringup/: CMakeLists.txt
omo_r1mini_bringup/launch/: omo_r1mini_boat.launch  omo_r1mini_bringup.launch  omo_r1mini_lidar.launch  omo_r1mini_lidar_g2.launch  omo_r1mini_robot_camera.launch  omo_r1mini_robot_g2.launch
omo_r1mini_bringup/nodes/: omo_packet_handler.py  omo_r1mini_node.py
omo_r1mini_cartographer/: package.xml
omo_r1mini_cartographer/launch/: omo_r1mini_cartographer.launch  omo_r1mini_cartographer_g2.launch
omo_r1mini_description/launch/: description_g2.launch
omo_r1mini_description/urdf/: r1mini.urdf.g2.xacro  r1mini_v1.urdf.xacro
omo_r1mini_gazebo/launch/: omo_r1mini_empty_world_mod.launch  omo_r1mini_gazebo_rviz.launch  omo_r1mini_gazebo_rviz_g2.launch  spawn_omo_r1mini_mod.launch
omo_r1mini_gazebo/sdf/: custom_omo_r1mini.gazebo.xacro  omo_r1mini.gazebo.xacro  omo_r1mini_v1.gazebo.xacro
omo_r1mini_navigation/launch/: move_base_nav.launch  omo_r1mini_navigation_g2.launch
omo_r1mini_navigation/param/: base_local_planner_params_mod.yaml  costmap_common_params_mod.yaml  global_costmap_params_mod.yaml  local_costmap_params_mod.yaml  move_base_params_mod.yaml
omo_r1mini_navigation2/: CMakeLists.txt  package.xml
omo_r1mini_teleop/: CMakeLists.txt  package.xml
omo_r1mini_teleop/launch/: omo_r1mini_teleop_boat.launch  omo_r1mini_teleop_joy.launch  omo_r1mini_teleop_key.launch
omo_r1mini_teleop/nodes/: omo_r1mini_teleop_joy.py  omo_r1mini_teleop_key.py
(+7 files in other folders)
